# Capstone-Team-Bangkit-Project-SEJAHTERA

./: Dockerfile  README.md  build.gradle.kts  main.py  pyproject.toml  settings.gradle.kts
Cloud Computing/: Documentation.md
Cloud Computing/API Emas dan Saham/: Dockerfile  app.py  requirements.txt
Cloud Computing/API Login dan Register/: .env  package-lock.json  package.json  server.js  tempCodeRunnerFile.js
Cloud Computing/API Login dan Register/api/: User.js
Cloud Computing/API Login dan Register/config/: db.js
Cloud Computing/API News/news-api/: package-lock.json  package.json
Cloud Computing/API News/news-api/src/: app.js
Cloud Computing/API News/news-api/src/controllers/: newsController.js
Saham/minutes/: ELTY.csv
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/res/drawable/: container_group11.xml  container_group22.xml  container_groupp.xml  container_rectangle22.xml  container_rectanglee.xml  custom_progress_bar.xml  drawable_image_11.xml  drawable_image_13.xml  drawable_image_144.xml  drawable_image_15.xml  drawable_image_2.xml  drawable_image_20.xml  drawable_image_4.xml  drawable_image_5.xml  drawable_shape_10.xml  drawable_shape_3.xml  drawable_shape_4.xml  drawable_shape_8.xml  drawable_shape_9.xml  edittext_background.xml  gradient_fill.xml  group_99.xml  image_ellipse3.xml  image_fork_spoon.xml  image_group.xml  image_group3s.xml  image_investment_selection.xml  image_lipstick.xml  image_rectangle33b.xml  image_rectangle66c.xml  image_vector.xml  image_vector1i.xml  image_vector22.xml  image_vector5.xml  (+17 more)
(+187 files in other folders)
