[build-system]
requires = ["setuptools", "wheel"]

[tool.poetry]
name = "stock-prediction-app"
version = "0.1.0"
description = "Stock prediction using Flask and TensorFlow"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.0.3"
numpy = "^1.22.0"
pandas = "^1.3.4"
tensorflow = "^2.10.0"
scikit-learn = "^1.0.2"
joblib = "^1.1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
